--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/es128/node-hangman/issues"
   },
-  "homepage": "https://github.com/es128/node-hangman"
+  "homepage": "https://github.com/es128/node-hangman",
+  "devDependencies": {
+    "coffee-script": "^1.8.0",
+    "mocha": "^1.21.4"
+  }
 }
