--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "hangman",
   "version": "0.1.0",
-  "description": "Prevents hung node.js processes",
+  "description": "Prevents hung Node.js processes",
   "main": "hangman.js",
+  "files": [
+    "hangman.js",
+    "monitor.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/es128/node-hangman"
